css/style.css
/*
Style guide
title font family: Inder
body font family: Anek Devanagari (200, 300, 400regular, 500, 600)
ink: #011936
dust: #465362
blood orange:#EF3E36 rgb(239, 62, 54) dark variant:#DF1E15
pool: #17BEBB
shiny: #F4FFFD
blurple: #6f4be0
*/

/*
Raft style guide
title font family: PoetsonOne
body font family: Trebuchet MS
midnight: #1E2F97
ocean: #1AA7EC
coral: #1AA7EC
*/

/* Layout Styling */
body{
  font-family: 'Anek Devanagari', sans-serif;
  color: #465362;
  box-sizing: border-box;
}
.container{
  padding: 30px 15px;
  box-sizing: border-box;
  margin: 100px auto;
}
header{
  background-color: #011936;
  padding: 10px;
  box-sizing: border-box;
  -webkit-box-shadow: 0px 4px 5px 0px rgba(50, 50, 50, 0.75);
  -moz-box-shadow: 0px 4px 5px 0px rgba(50, 50, 50, 0.75);
  box-shadow: 0px 4px 5px 0px rgba(50, 50, 50, 0.75);
  position: fixed;
  width: 100%;
}
.logo{
  width: 50px;
}
#work{
  margin-top: 30px;
}
#work .row{
  margin: 25px 0; /*25px margin top and bottom, 0 left and right*/
  box-sizing: border-box;
}
#hero{
  display: block;
  background-color: #f8f6f9;
  height: 750px;
}
#hero .container{
  padding: 100px 30px;
  box-sizing: border-box;
  text-align: center;
  margin: 0 auto;
}
#hero h1{
  margin 0;
  text-align: center; /*center text*/
  box-sizing: border-box;
  color: #011936;
}
#hero span{
  display: block;
  padding: 40px 30px;
}
#story{
  height: 800px;
}
.illustration{
  height: 300px;
  width: auto;
  box-sizing: border-box;
}
nav{
  box-sizing: border-box;
  width: 100%;
}
nav > ul{
  list-style-type: none;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
nav > ul > li{
  box-sizing: border-box;
}
nav > ul > li > a{
  padding:0 15px; /*0 on top and bottom, 15px left and right*/
  text-transform: uppercase;
  font-weight: 600;
  color: #F4FFFD;
  text-decoration: none;
}
.navtoggle li:not(:last-child) {
  display: none; /*Hide all navigation elements except for hamburger icon in mobile view*/
}
.navtoggle, .navtoggle.responsive {
  position: relative;
}
.navtoggle li .hamburgericon {
  position: absolute;
  right: 0;
  top: 5px;
  font-size: 30px;
  padding-right: 5px;
}
.navtoggle.responsive nav{
  padding: 24px 0 0;
}
.navtoggle.responsive li {
  display: block;
  padding: 20px 0;
  border-top: 1px solid rgba(239, 62, 54, .2);
  text-align: center;
}
.navtoggle.responsive li:last-child{
  padding: 0 0 10px;
}
main{
  padding: 65px 0 0 0;
  box-sizing: border-box;
}
h1{
  font-family: 'Inder', sans-serif;
  color: #011936;
  font-size: 2em;
  box-sizing: border-box;
  text-align: center;
}
h2{
  font-family: 'Inder', sans-serif;
  color: #011936;
  font-size: 1.5em;
  box-sizing: border-box;
  text-align: center;
}
h3{
  color: #011936;
}
a:active{
  text-decoration: none;
  color: #17BEBB;
}
.button{
  display: inline-block;
  box-sizing: border-box;
  border-style: solid;
  border-width: 1px;
  border-color: #EF3E36;
  border-radius: 5px;
  padding: 10px;
  color: #EF3E36;
  text-decoration: none;
  font-weight: 400;
  background-color: rgba(239, 62, 54, 0);
  transition: all 0.2s;
}
.button:hover{
  background-color: rgba(239, 62, 54, 100);
  color: white;
  font-weight:500;
}
.icon{
  display: inline-block;
  width: 50px;
}
img{
  width: 100%;
}
picture{
  width: 50%;
  margin: auto;
}
.headshot{
  display: block;
  width: 80%;
  height: auto;
  border-radius: 400px;
  margin-right: auto;
  margin-left: auto;
}
footer{
  box-sizing: border-box;
  display: block;
  background-color: #011936;
  padding: 1% 5%;
  color: #F4FFFD;
  text-align: center;
}
.contact-icon-list{
  list-style-type: none;
  display: flex;
  justify-content: space-around;
  padding: 30px;
}
.contact-icon-list li{
  display: inline-block;
}
footer .container{
  background-color: unset;
}
.footer-title{
  color: #F4FFFD;
  text-align: center;
}
.sun{
  animation: 4s color-change infinite alternate linear;
}
.cloud-front {
  animation: 30s cloud-move infinite alternate linear;
}
.cloud-back {
  animation: 34s cloud-move-reverse infinite alternate linear;
}
.top-left-corner{
  color: #F4FFFD;
  text-align: left;
  display: inline-block;
  margin: 10px;
}

/*Medium devices (640px and larger)*/
@media only screen and (min-width: 640px){
  body{
    font-size: 18px;
  }
  header{
    text-align: unset;
  }
  nav{
    width: auto;
    float: right;
  }
  nav > ul{
    margin: 1em 0;
  }
  nav > ul > li{
    display: inline-block;
    box-sizing: border-box;
  }
  .navtoggle li:not(:last-child){
    display: inline-block;
  }
  .navtoggle li:last-child{
    display: none;
  }
  main{
    padding-top: 76px;
  }
  [class*="col-"]{
    width: 50%;
    float: left;
    box-sizing: border-box;
    padding: 10px;
    overflow: auto;
  }
  .row::after{
    content: "";
    clear: both;
    display: table;
  }
  #hero{
    height: 550px;
  }
  .illustration{
    height: 480px;
    width: auto;
    box-sizing: border-box;
  }
  #work{

  }
  #testimonials{
    height: 700px;
  }
  #story{
    height: 600px;
  }
}
/*large devices (1024px and larger)*/
@media only screen and (min-width: 1024px){
  .container{
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
  }
  .col-lg-4{
    width: 33.33%;
  }
  .col-lg-8{
    width: 66.66%;
  }
  #hero{
    height: 450px;
  }
  .illustration{
    height: 400px;
    width: auto;
    box-sizing: border-box;
  }
  #hero h1{
    font-size: 42px;
  }
  #story{
    height: 500px;
  }
}

/*Extra large devices (1440px and larger)*/
@media only screen and (min-width: 1440px){
  #hero h1{
    font-size: 48px;
  }
}

@keyframes color-change{
  from {fill: #edc655;}
  to {fill: #f76414;}
}
@keyframes cloud-move{
  from {transform: translate(0,50px);}
  to {transform: translate(200px,50px);}
}
@keyframes cloud-move-reverse{
  from {transform: translate(446px,48px);}
  to {transform: translate(100px, 48px);}
}

